--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,10 +4,9 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Bem-vindo!</h1>
-    <p th:if="${name}">Logado como: <span th:text="${name}"></span></p>
-    <img th:if="${avatar_url}" th:src="${avatar_url}" width="100"/>
-    <br/>
-    <a href="/logout">Sair</a>
+    <h1>Bem-vindo, <span th:text="${name}">Usuário</span>!</h1>
+    <p>Email: <span th:text="${email}">email@exemplo.com</span></p>
+    <p>GitHub ID: <span th:text="${github_id}">github123</span></p>
+    <img th:src="${avatar_url}" alt="Avatar" width="100">
 </body>
 </html>
